Rocky 2.3 (logo, email, saturday color)

--- a/RockyClock/App.config
+++ b/RockyClock/App.config
@@ -19,7 +19,7 @@
     <add key="ClockType" value=""/>
     <add key="Password" value=""/>
     <add key="succeeded" value=""/>
-    <add key="email" value="eyal@z-zol.co.il"/>
+    <add key="email" value="ehudtir@gmail.com"/>
   </appSettings>
   <entityFramework>
     <providers>
